1.20.5 reversion